test_scores/negative_dimers/features/Q8TD31.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q8TD31.pkl.xz